--- a/index.html
+++ b/index.html
@@ -58,10 +58,59 @@
                             <h3 class="blog-title">
                                 13 of My Favorite UI/UX Goodies
                             </h3>
-                            <p class="blog-author">By<a href=""></a> Danny Sapio</p>
+                            <p class="blog-author">By<a href=""> Danny Sapio</a></p>
                         </div>
 
                     </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">
+                                13 of My Favorite UI/UX Goodies
+                            </h3>
+                            <p class="blog-author">By<a href=""> Danny Sapio</a></p>
+                        </div>
+
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">
+                                13 of My Favorite UI/UX Goodies
+                            </h3>
+                            <p class="blog-author">By<a href=""> Danny Sapio</a></p>
+                        </div>
+
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">
+                                13 of My Favorite UI/UX Goodies
+                            </h3>
+                            <p class="blog-author">By<a href=""> Danny Sapio</a></p>
+                        </div>
+
+                    </article>
+                </div>
+            </div>
+        </section>
+        <!-- latest courses -->
+        <section class="container">
+            <h2 class="section-title">
+                Latest courses
+            </h2>
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="./images/courses/course-1.png" alt="">
+                    </div>
                 </div>
             </div>
         </section>
